[tool.poetry]
name = "grimoirebots-fastapi"
version = "0.1.0"
description = ""
authors = ["Sergio Merino Hernández <merinhunter94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
fastapi = "~0"
uvicorn = "~0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
